--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "simple-icons": "^6.23.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
