--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.4",
-    "vite": "^2.9.18"
+    "vite": "^2.9.18",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
